--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
   <div class="nav-wrapper">
     <a href="#" class="brand-logo"><img src="../assets/logo.png" height="auto"></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <!--<li><a class="menu_button" [routerLink] = "'/product-list'">Lista produktów <i class="material-icons left">format_list_bulleted</i></a></li>
+      <li><a class="menu_button" [routerLink] = "'/product-list'">Lista produktów <i class="material-icons left">format_list_bulleted</i></a></li>
       <li><a class="menu_button" [routerLink] = "'/shopping-cart'">Koszyk <i class="material-icons left">shopping_basket</i></a></li>
-      <li><a class="menu_button" [routerLink] = "'/order'">Realizacja zamówienia <i class="material-icons left">motorcycle</i></a></li>-->
+      <li><a class="menu_button" [routerLink] = "'/order'">Realizacja zamówienia <i class="material-icons left">motorcycle</i></a></li>
     </ul>
   </div>
 </nav>
