--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <li><a class="menu_button" [routerLink] = "'/shopping-cart'">Koszyk <i class="material-icons left">shopping_basket</i></a></li>
       <li><a class="menu_button" [routerLink] = "'/order'">Realizacja zamówienia <i class="material-icons left">motorcycle</i></a></li>
     </ul>
-  <!--</div>-->
+  </div>
 </nav>
 </div>
 
