--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--<div class="navbar-fixed">-->
+<div class="navbar-fixed">
 <nav>
   <div class="nav-wrapper">
    <a href="#" class="brand-logo"><img src="../assets/logo.png" height="auto"></a>
@@ -8,7 +8,7 @@
       <li><a class="menu_button" [routerLink] = "'/order'">Realizacja zamówienia <i class="material-icons left">motorcycle</i></a></li>
     </ul>
   </div>
-</nav>
+<!--</nav>-->
 </div>
 
 <router-outlet></router-outlet>
