--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <li><a class="menu_button" [routerLink] = "'/order'">Realizacja zamówienia <i class="material-icons left">motorcycle</i></a></li>
     </ul>
   </div>
-<!--</nav>-->
+</nav>
 </div>
 
 <router-outlet></router-outlet>
