--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--<div class="navbar-fixed">
+<div class="navbar-fixed">
 <nav>
   <div class="nav-wrapper">
    <a href="#" class="brand-logo"><img src="../assets/logo.png" height="auto"></a>
@@ -12,4 +12,3 @@
 </div>
 
 <router-outlet></router-outlet>
--->
