--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,11 +2,11 @@
   text-shadow: 2px 2px 4px #000000;
 }
 
-nav {
+/*nav {
   background-color: #3D5AFE;
   box-shadow: none;
 }
-
+*/
 nav img {
   position: relative;
   top: 7px;
