--- a/src/app/order/order.component.css
+++ b/src/app/order/order.component.css
@@ -2,7 +2,7 @@ header {
     background-image: url('../../assets/picture_2.png');
 }
 
-/*table th, table td {
+table th, table td {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -13,7 +13,7 @@ header {
 table td {
     color: #000;
 }
-*/
+
 table .product-description {
     font-style: italic;
     font-weight: normal;
