--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,4 +1,4 @@
-/*.card-title {
+.card-title {
     text-shadow: 2px 2px 4px #000000;
 }
 
@@ -27,4 +27,3 @@
 header {
     background-image: url('../../assets/picture_1.png');
 }
-*/
