--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<!--<header>
+<header>
     <h1>Stwórz prezent marzeń dla siebie lub bliskiej osoby!</h1>
 
     <p>
@@ -30,4 +30,3 @@
 
     </div>
   </div>
-  -->
