--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
 .container h3 {
     color: #3D5AFE;
 }
@@ -26,3 +24,97 @@ header p {
 .actions a {
     text-transform: none;
 }
+
+.brand-logo {
+    text-shadow: 2px 2px 4px #000000;
+}
+  
+nav {
+    background-color: #3D5AFE;
+    box-shadow: none;
+  }
+  
+nav img {
+    position: relative;
+    top: 7px;
+    left: 7px;
+}
+
+.card-title {
+    text-shadow: 2px 2px 4px #000000;
+}
+
+.cart-button {
+    position: fixed;
+    right: 14px;
+    top: 79px;
+    background-color: black;
+    box-shadow: none;
+}
+
+.price {
+    color: #fff;
+    font-weight: 600;
+}
+
+.card a {
+    background-color: #3D5AFE;
+}
+
+.card-content {
+    min-height: 92px;
+    font-size: 11px;
+}
+
+header {
+    background-image: url('/assets/picture_1.png');
+}
+
+table th, table td {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
+    color: #757575;
+}
+
+table td {
+    color: #000;
+}
+
+table .product-description {
+    font-style: italic;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    color: #9E9E9E;
+}
+
+.collapsible {
+    box-shadow: none;
+    -webkit-box-shadow: none;
+}
+
+.collection, .collection-item {
+    border: none;
+}
+
+.trash-icon {
+    top: 15px;
+    position: relative;
+}
+
+.product-description, .product-price {
+    font-weight: normal;
+    font-size: 12px;
+    color: #9E9E9E;
+}
+
+.product-description {
+    font-style: italic;
+}
+
+.badge {
+    color: #000;
+}
+
